# OMies-CoinFlip

./: .gitignore  README.md  commands.txt
contracts/: Cargo.toml  build.sh  codegen.sh
contracts/.cargo/: config
contracts/artifacts/: checksums.txt  checksums_intermediate.txt  platform.wasm
contracts/contracts/platform/: Cargo.toml
contracts/contracts/platform/examples/: schema.rs
contracts/contracts/platform/schema/: platform.json
contracts/contracts/platform/src/: contract.rs  helpers.rs
contracts/contracts/platform/src/actions/: execute.rs  instantiate.rs  migrate.rs  query.rs
contracts/tests/: Cargo.toml
contracts/tests/src/: platform.rs
contracts/tests/src/helpers/: platform.rs
contracts/tests/src/helpers/suite/: codes.rs  core.rs  types.rs
scripts/: package.json
scripts/src/backend/services/: call-contract.ts  constants.ts  store-contract.ts  utils.ts
scripts/src/backend/services/capture/: users.ts
scripts/src/backend/services/snapshots/mantra/testnet/: users.json
scripts/src/common/account/: cw-helpers.ts
scripts/src/common/codegen/: Platform.client.ts  Platform.message-composer.ts  Platform.types.ts
scripts/src/common/config/: config.json  index.ts
