[workspace.package]
edition = "2021"
repository = "https://github.com/cryptogopniks/OMies-CoinFlip"
authors = ["M. Daeva <embedmad@gmail.com>"]
license = "Apache-2.0"

[workspace]
members = [
    "contracts/*",
    "packages/*",
    "tests"
]
exclude = []
resolver = "2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["stargate"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
cw20 = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
argon2 = "0.5.3"
serde = "1.0.163"
strum = "0.24.1"
strum_macros = "0.24.3"
thiserror = "1.0.43"
anyhow = "1.0.71"
semver = "1.0.20"

# testing
cw-multi-test = { version = "2.3.0", features = ["staking"] }
speculoos = "0.11.0"
rand = "0.8.5"

# packages
cf-base = { path = "./packages/cf-base" }
hashing-helper = { path = "./packages/hashing-helper" }

# contracts
platform = { path = "./contracts/platform" }
