[package]
name = "platform"
version = "1.0.0"
authors = ["M. Daeva <embedmad@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
serde = { workspace = true }
cf-base = { workspace = true }
hashing-helper = { workspace = true }
semver = { workspace = true }
